# c_gtk

./: CMakeLists.txt  main.c  window.c  window.h
resource/: window.ui
